<resources>
	<string name="app_name">Canteen Manager</string>
	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_username">Username</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="title_home">Home</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_notifications">Notifications</string>
	<string name="title_ratings">Ratings</string>
	<string name="title_details">Details</string>


	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="msg_LoginNotSucessfull">Login failed</string>
	<string name="action_save_details">Save</string>
	<string name="prompt_CanteenName">Canteen Name</string>
	<string name="prompt_DailyMenu">Menu of the day</string>
	<string name="prompt_MenuPrice">Price per menu</string>
	<string name="prompt_Address">Address</string>
	<string name="prompt_Website">Website</string>
	<string name="prompt_Phone">Phone</string>
	<string name="WaitingTime">Waiting time: </string>
	<string name="ratingSummary">Summary</string>
	<string name="action_delete_rating">Delete</string>

	<string name="format_date">MM/dd/yyyy</string>
	<string name="title_rating_details">Rating details</string>
	<string name="msg_CanteenNotAvailable">Could not load canteen</string>
	<string name="title_activity_maps">Map</string>
	<string name="web">W</string>
</resources>
