<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.LoginActivity">


		<LinearLayout
			android:id="@+id/canteen_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/cc_logo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/cclogo"
				android:layout_gravity="center"
				android:layout_marginTop="@dimen/distance_large"
				android:layout_marginBottom="@dimen/distance_large"/>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/distance_large"
				android:layout_marginRight="@dimen/distance_large">

				<AutoCompleteTextView
					android:id="@+id/edtUserName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_username"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/distance_large"
				android:layout_marginRight="@dimen/distance_large">

				<EditText
					android:id="@+id/edtPassWord"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_password"
					android:imeActionId="6"
					android:imeActionLabel="@string/action_sign_in_short"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/btnLogIn"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/distance_large"
				android:text="@string/action_sign_in"
				android:textStyle="bold"/>

		</LinearLayout>

</android.support.constraint.ConstraintLayout>